--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "server": "node server.js",
     "server:dev": "nodemon server.js",
     "lint": "next lint",
